apps/emqx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: emqx
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: emqx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx
                port:
                  number: 18083
  tls:
    - hosts:
        - emqx
